# PAOO

src/: CMakeLists.txt
src/classes/: SmartArray.cpp
tema1src/: main.cpp
tema1src/classes/: SmartArray.h
tema2src/: CMakeLists.txt  main.cpp
tema2src/classes/: CMakeLists.txt  SecondSmartArray.cpp  SecondSmartArray.h  SmartArray.cpp  SmartArray.h  SmartInterface.cpp  SmartInterface.h
tema3src/: CMakeLists.txt  main.cpp
tema3src/classes/: Attendance.cpp  Attendance.h  CMakeLists.txt
